# SpineToolkit

./: CMakeLists.txt  README.md
LigamentLandmarkDetection/: CMakeLists.txt  LigamentDetection.py
LigamentLandmarkDetection/Datasets/ArtificialSawbones/Sawbones_Ligaments_GT/: C1_Sawbone.stl  C2_Sawbone.stl  C3_Sawbone_LigamentLandmarks.mrk.json  C5_Sawbone_LigamentLandmarks.mrk.json  C6_Sawbone.stl  C7_Sawbone.stl  C7_Sawbone_LigamentLandmarks.mrk.json  L1_Sawbone_LigamentLandmarks.mrk.json  L2_Sawbone.stl  L3_Sawbone_LigamentLandmarks.mrk.json  L4_Sawbone.stl  L4_Sawbone_LigamentLandmarks.mrk.json  T10_Sawbone_LigamentLandmarks.mrk.json  T11_Sawbone.stl  T11_Sawbone_LigamentLandmarks.mrk.json  T12_Sawbone_LigamentLandmarks.mrk.json  T2_Sawbone_LigamentLandmarks.mrk.json  T3_Sawbone_LigamentLandmarks.mrk.json  T5_Sawbone.stl  T6_Sawbone.stl  T6_Sawbone_LigamentLandmarks.mrk.json  T7_Sawbone.stl  T7_Sawbone_LigamentLandmarks.mrk.json  T8_Sawbone.stl  T9_Sawbone.stl  T9_Sawbone_LigamentLandmarks.mrk.json
LigamentLandmarkDetection/Datasets/ArtificialSawbones_Ligaments_GT/: C3_Sawbone.stl  C4_Sawbone.stl  C4_Sawbone_LigamentLandmarks.mrk.json  C5_Sawbone.stl  C6_Sawbone_LigamentLandmarks.mrk.json  L1_Sawbone.stl  L2_Sawbone_LigamentLandmarks.mrk.json  L3_Sawbone.stl  L5_Sawbone.stl  L5_Sawbone_LigamentLandmarks.mrk.json  S1_Sawbone.stl  T10_Sawbone.stl  T12_Sawbone.stl  T1_Sawbone.stl  T1_Sawbone_LigamentLandmarks.mrk.json  T2_Sawbone.stl  T3_Sawbone.stl  T4_Sawbone.stl  T4_Sawbone_LigamentLandmarks.mrk.json  T5_Sawbone_LigamentLandmarks.mrk.json  T8_Sawbone_LigamentLandmarks.mrk.json
LigamentLandmarkDetection/Datasets/Cervical_Ligaments_GT/Bc11701/: Bc11701_C3.stl  Bc11701_C6.stl  Bc11701_C7.stl
LumbarSpineCreator/: CMakeLists.txt  LumbarSpineCreator.py
LumbarSpineCreator/Resources/UI/: LumbarSpineCreator.ui
LumbarSpineReconstruction/: LumbarSpineReconstruction.py
LumbarSpineReconstruction/Resources/UI/: LumbarSpineReconstruction.ui
LumbarSpineReconstruction/SawbonesSpine/: L1_FJA_Source.mrk.json  L1_FacetJoints.mrk.json  L1_Landmarks.mrk.json  L1_Plane.mrk.json  L1_Sawbone.stl  L2_FJA_Source.mrk.json  L2_FacetJoints.mrk.json  L2_Landmarks.mrk.json  L2_Plane.mrk.json  L2_Sawbone.stl  L3_FJA_Source.mrk.json  L3_FacetJoints.mrk.json  L3_Landmarks.mrk.json  L3_Plane.mrk.json  L3_Sawbone.stl  L4_FJA_Source.mrk.json  L4_FacetJoints.mrk.json  L4_Landmarks.mrk.json  L4_Plane.mrk.json  L4_Sawbone.stl  L5_FJA_Source.mrk.json  L5_FacetJoints.mrk.json  L5_Landmarks.mrk.json  L5_Plane.mrk.json  L5_Sawbone.stl
ShapeSegmentation/: ShapeSegmentation.py
ShapeSegmentation/Datasets/LumASe_Segmentation_GT/: 101002745900_L4.vtk  101002745900_L5.vtk  101002913418_L5.vtk  101002933661_L4.vtk  101002933661_L5.vtk  101002962339_L5.vtk  101002964255_L2.vtk  101002964255_L4.vtk  101002966830_L4.vtk  101003042867_L4.vtk  101003106407_L4.vtk  101003127570_L4.vtk  101003202658_L4.vtk  101003206610_L5.vtk  101003278807_L5.vtk  101003304950_L5.vtk  101003319153_L5.vtk  101003376406_L5.vtk  101003571875_L1.vtk  101003571875_L2.vtk  101003584395_L4.vtk  101003613743_L1.vtk  101003613743_L2.vtk  101003613743_L4.vtk  101003704762_L5.vtk  101003733008_L5.vtk  101003854706_L1.vtk  101003886540_L5.vtk  101003952459_L5.vtk  101004102772_L2.vtk  101004115127_L2.vtk  101004115127_L4.vtk  101004122632_L4.vtk  101004124592_L2.vtk  101004148602_L2.vtk  101004175627_L1.vtk  101004232772_L2.vtk  101004253744_L3.vtk  101004275204_L1.vtk  101004275204_L3.vtk  (+28 more)
ShapeSegmentation/Datasets/VerSe_Segmentation_GT/: Verse005_L2.vtk  Verse005_L3.vtk  Verse005_L4.vtk  Verse005_L5.vtk  Verse561_C5.vtk  Verse561_C7.vtk  Verse561_L1.vtk  Verse561_L3.vtk  Verse561_T2.vtk  Verse561_T4.vtk  Verse581_T2.vtk  Verse581_T6.vtk  Verse581_T9.vtk  Verse631_C3.vtk  Verse631_C5.vtk  Verse631_C6.vtk  Verse631_L1.vtk  Verse631_L2.vtk  Verse631_L3.vtk  Verse631_T1.vtk  Verse631_T11.vtk  Verse631_T13.vtk  Verse631_T3.vtk  Verse631_T4.vtk  Verse631_T5.vtk  Verse631_T6.vtk  Verse631_T7.vtk  Verse631_T9.vtk  Verse823_C3.vtk  Verse823_C4.vtk  Verse823_C6.vtk  Verse823_C7.vtk  Verse823_L1.vtk  Verse823_L2.vtk  Verse823_L3.vtk  Verse823_L4.vtk  Verse823_T10.vtk  Verse823_T11.vtk  Verse823_T2.vtk  Verse823_T7.vtk  (+2 more)
ShapeSegmentation/Resources/UI/: ShapeSegmentation.ui
SpineLib/: Spine.py  requirements.txt
(+1006 files in other folders)
